--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,9 @@
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.6/dist/js/uikit.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.6/dist/js/uikit-icons.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   
-  <link rel="stylesheet" href="https://snipcart-hugo-forestry.netlify.com/scss/main.min.f2919d5d8756685398436d349db99bffdac14bd71c86b693f52555fab0fbf3f8.css">
+  <link rel="stylesheet" href="https://chickenchipsmockup.netlify.com/scss/main.min.f2919d5d8756685398436d349db99bffdac14bd71c86b693f52555fab0fbf3f8.css">
   <script src=""></script>
   <title>Chicken'n'Chips</title>
 </head>
